# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml  sqlx-data.json
.octopus/test/: variables.ocl
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20220415035415_create_subcription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs
